<resources>
    <string name="app_name">MVVM Architecture</string>
    <string name="get_data">get data</string>
    <string name="page_number">Page number (1–4)</string>
    <string name="do_you_want_to_remove_this_user_from_database">Do you want to remove this user from database?</string>
    <string name="add_new_user">Add new user</string>
    <string name="submit">Submit</string>
    <string name="user_id">User ID: %s</string>
    <string name="job">Job: %s</string>
    <string name="name">Name: %s</string>
    <string name="created_at">Created at: %s</string>
    <string name="upload_new_user_success">POST USER SUCCESSFUL</string>
    <string name="post_new_user">POST NEW USER</string>
    <string name="post">Post</string>
    <string name="user_information">USER INFORMATION</string>
    <string name="delete_user">Delete user</string>
    <string name="delete">Delete</string>
    <string name="user_creating">User creating…</string>
    <string name="user_create_failed">User create failed</string>
    <string name="check_your_connection_and_try_again">Check your connection and try again.</string>

    <!--error message-->
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="connect_timeout">Connect Timeout</string>
    <string name="force_update_app">Please update app</string>
    <string name="server_maintain_message">Server maintain, please try again later</string>
    <string name="no_data">No data</string>
</resources>
