<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout">

    <data>

        <variable
            name="viewModel"
            type="com.binhnk.retrofitwithroom.ui.screen.main.MainActivityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog">

        <LinearLayout
            android:id="@+id/layout_create_failed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="vertical"
            android:visibility="gone"
            android:paddingStart="@dimen/_14sdp"
            android:paddingEnd="@dimen/_14sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_32sdp"
                android:layout_marginTop="@dimen/_14sdp"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="@string/user_create_failed"
                android:textAllCaps="true"
                android:textColor="#CA0000"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_height="wrap_content"
                android:text="@string/check_your_connection_and_try_again"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginBottom="@dimen/_14sdp"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:onClick="@{view-> viewModel.onCancelClicked()}"
                android:paddingStart="@dimen/_14sdp"
                android:paddingTop="@dimen/_6sdp"
                android:paddingEnd="@dimen/_14sdp"
                android:paddingBottom="@dimen/_6sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@android:string/ok"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_creating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible"
            android:padding="@dimen/_14sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ProgressBar
                android:layout_width="@dimen/_22sdp"
                android:layout_height="@dimen/_22sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_14sdp"
                android:text="@string/user_creating"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_create_success"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_14sdp"
            android:paddingEnd="@dimen/_14sdp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_header"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_32sdp"
                android:layout_marginTop="@dimen/_14sdp"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="@string/upload_new_user_success"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_id_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="User ID:"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_header" />

            <TextView
                android:id="@+id/tv_id_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_name_2"
                app:layout_constraintTop_toBottomOf="@id/tv_header" />

            <TextView
                android:id="@+id/tv_name_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="User name:"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_id_1" />

            <TextView
                android:id="@+id/tv_name_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_name_1"
                app:layout_constraintTop_toBottomOf="@id/tv_id_2" />

            <TextView
                android:id="@+id/tv_job_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:text="User job:"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_name_1" />

            <TextView
                android:id="@+id/tv_job_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_name_2"
                app:layout_constraintTop_toBottomOf="@id/tv_name_2" />

            <TextView
                android:id="@+id/tv_created_at_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:text="Created at:"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_job_1" />

            <TextView
                android:id="@+id/tv_created_at_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:gravity="center_vertical"
                android:maxLines="2"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_name_2"
                app:layout_constraintTop_toBottomOf="@id/tv_job_2" />

            <TextView
                android:id="@+id/tv_ok"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_14sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_14sdp"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:onClick="@{view-> viewModel.onCancelClicked()}"
                android:paddingStart="@dimen/_14sdp"
                android:paddingTop="@dimen/_6sdp"
                android:paddingEnd="@dimen/_14sdp"
                android:paddingBottom="@dimen/_6sdp"
                android:text="@android:string/ok"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_created_at_2" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>